added authentication, the routes are now protected
