# app.js
@@ -14,18 +14,8 @@ const passportLocalMongoose = require("passport-local-mongoose");
 const mongoose = require("mongoose");
 const findOrCreate = require("mongoose-findorcreate");
 const User = require("./user.js");
-
+const GoogleStrategy = require("passport-google-oauth20").Strategy;
 const app = express();
-app
-  .use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument))
-  .use(bodyParser.json())
-  .use(cors({ origin: "*" }))
-  .use((req, res, next) => {
-    res.setHeader("Access-Control-Allow-Origin", "*");
-    res.header("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE");
-    next();
-  })
-  .use("/", require("./routes"));
 
 app.use(
   session({
@@ -56,6 +46,53 @@ passport.deserializeUser((id, done) => {
     });
 });
 
+passport.use(
+  new GoogleStrategy(
+    {
+      clientID: process.env.CLIENT_ID,
+      clientSecret: process.env.CLIENT_SECRET,
+      callbackURL: "http://localhost:3000/auth/google/note-capture",
+      userProfileURL: "https://www.googleapis.com/oauth2/v3/userinfo",
+    },
+    function (accessToken, refreshToken, profile, cb) {
+      User.findOrCreate(
+        { googleId: profile.id, username: profile.displayName },
+        function (err, user) {
+          console.log("profile: ", profile);
+          return cb(err, user);
+        }
+      );
+    }
+  )
+);
+
+app.get("/auth/google", (req, res) => {
+  console.log("in the auth code");
+  passport.authenticate("google", { scope: ["profile"] })(req, res);
+});
+
+app.get(
+  "/auth/google/note-capture",
+  passport.authenticate("google", {
+    failureRedirect: "http://localhost:3000/start_page/sign-in",
+  }),
+  function (req, res) {
+    res.redirect("http://localhost:3000/api-docs");
+    console.log("in the auth doc");
+  }
+);
+
+app
+  .use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+  .use(bodyParser.json())
+  .use(cors({ origin: "*" }))
+  .use((req, res, next) => {
+    res.setHeader("Access-Control-Allow-Origin", "*");
+    res.header("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE");
+    next();
+  })
+  .use("/", require("./routes"));
+
 mongodb.initDb((err, mongodb) => {
   if (err) {
     console.log(err);
@@ -63,4 +100,8 @@ mongodb.initDb((err, mongodb) => {
     app.listen(port);
     console.log(`Connected to DB and listening on ${port}`);
   }
+});
+
+app.listen(3000, () => {
+  console.log("listening on port 3000 for api documentation");
 });
