# routes/notes.js
@@ -1,8 +1,22 @@
 const express = require("express");
 const router = express.Router();
+
 const notesController = require("../controllers/notes");
 
-router.get("/", notesController.getNotes, () => {
+// Define the ensureAuthenticated middleware
+const ensureAuthenticated = (req, res, next) => {
+  if (req.isAuthenticated()) {
+    console.log("you're authenticated now!");
+    return next(); // User is authenticated, proceed to the next middleware
+  }
+
+  res.status(401).json({
+    message:
+      "Authentication required. In the browser url remove doc and replace it with start_page/sign-in",
+  });
+};
+
+router.get("/", ensureAuthenticated, notesController.getNotes, () => {
   /**
    * #swagger.tags = ["Notes"]
    * #swagger.summary = "Get all of the notes in the database"
@@ -10,7 +24,7 @@ router.get("/", notesController.getNotes, () => {
    */
 });
 
-router.get("/:id", notesController.getNote, () => {
+router.get("/:id", ensureAuthenticated, notesController.getNote, () => {
   /**
    * #swagger.tags = ["Notes"]
    * #swagger.summary = "Get a specific note by id"
@@ -18,7 +32,7 @@ router.get("/:id", notesController.getNote, () => {
    */
 });
 
-router.post("/", notesController.createNote, () => {
+router.post("/", ensureAuthenticated, notesController.createNote, () => {
   /**
    * #swagger.tags = ["Notes"]
    * #swagger.summary = "Create a note in the database"
@@ -26,7 +40,7 @@ router.post("/", notesController.createNote, () => {
    */
 });
 
-router.put("/:id", notesController.updateNote, () => {
+router.put("/:id", ensureAuthenticated, notesController.updateNote, () => {
   /**
    * #swagger.tags = ["Notes"]
    * #swagger.summary = "Modify the specified note"
@@ -34,7 +48,7 @@ router.put("/:id", notesController.updateNote, () => {
    */
 });
 
-router.delete("/:id", notesController.deleteNote, () => {
+router.delete("/:id", ensureAuthenticated, notesController.deleteNote, () => {
   /**
    * #swagger.tags = ["Notes"]
    * #swagger.summary = "Delete the specified note"
@@ -42,23 +56,30 @@ router.delete("/:id", notesController.deleteNote, () => {
    */
 });
 
-router.get("/note/:noteTag", notesController.findByTag, () => {
-  /**
-   * #swagger.tags = ["Tags"]
-   * #swagger.summary = "Find notes by tag"
-   * #swagger.description = "Endpoint to find notes by tag"
-   */
-});
+router.get(
+  "/note/:noteTag",
+  ensureAuthenticated,
+  notesController.findByTag,
+  () => {
+    /**
+     * #swagger.tags = ["Tags"]
+     * #swagger.summary = "Find notes by tag"
+     * #swagger.description = "Endpoint to find notes by tag"
+     */
+  }
+);
 
-router.put("/note/:noteId/addTag", notesController.addTagToNote, () => {
-  /**
-   * #swagger.tags = ["Tags"]
-   * #swagger.summary = "Add a tag to the specified note"
-   * #swagger.description = "Endpoint to add a tag to the specified note"
-   */
-});
-router.put('/:noteId/tags/:tagId', notesController.updateNoteTag);
-
-router.delete('/:noteId/tags/:tagId', notesController.deleteNoteTag);
+router.put(
+  "/note/:noteId/addTag",
+  ensureAuthenticated,
+  notesController.addTagToNote,
+  () => {
+    /**
+     * #swagger.tags = ["Tags"]
+     * #swagger.summary = "Add a tag to the specified note"
+     * #swagger.description = "Endpoint to add a tag to the specified note"
+     */
+  }
+);
 
 module.exports = router;
